fixed header readability

--- a/deck-builder/css/index.css
+++ b/deck-builder/css/index.css
@@ -516,7 +516,7 @@ input { /* Search input box */
       }
 
       .left-panel .card {
-         animation-duration: 0s;
+         animation: none;
       }
 
       /* TYPOGRAPHY */
